--- a/src/core/style/layout.scss
+++ b/src/core/style/layout.scss
@@ -43,7 +43,7 @@
 }
 
 
-@mixin layout-for-size($name) {
+@mixin layout-for-name($name) {
   [hide]:not([show-#{$name}]),
   [hide-#{$name}]:not([show-#{$name}]) {
     display: none;
@@ -61,7 +61,7 @@
   }
 }
 
-@mixin flex-properties-for-size($name: null) {
+@mixin flex-properties-for-name($name: null) {
   $flexName: 'flex';
   $offsetName: 'offset';
   @if $name != null {
@@ -71,29 +71,29 @@
 
   // (0-19) * 5 = 0-95%
   @for $i from 0 through 19 {
-    [#{$flexName}="#{$i * 5}"] {
+    [#{$flexName}=#{$i * 5}] {
       flex: 0 0 #{$i * 5 + '%'};
       max-width: #{$i * 5 + '%'};
     }
 
-    [#{$offsetName}="#{$i * 5}"] {
+    [#{$offsetName}=#{$i * 5}] {
       margin-left: #{$i * 5 + '%'};
     }
   }
 
-  [#{$flexName}="33"], [#{$flexName}="34"] {
+  [#{$flexName}=33], [#{$flexName}=34] {
     flex: 0 0 33.33%;
     max-width: 33.33%;
   }
-  [#{$flexName}="66"], [#{$flexName}="67"] {
+  [#{$flexName}=66], [#{$flexName}=67] {
     flex: 0 0 66.66%;
     max-width: 66.66%;
   }
 
-  [#{$offsetName}="33"], [#{$offsetName}="34"] {
+  [#{$offsetName}=33], [#{$offsetName}=34] {
     margin-left: 33.33%;
   }
-  [#{$offsetName}="66"], [#{$offsetName}="67"] {
+  [#{$offsetName}=66], [#{$offsetName}=67] {
     margin-left: 66.66%;
   }
 
@@ -106,22 +106,42 @@
   flex: 1;
 }
 
-@include flex-properties-for-size();
+@include flex-properties-for-name();
+
 @media (max-width: $layout-breakpoint-sm) {
-  @include layout-for-size(phone);
-  @include flex-properties-for-size(phone);
+  @include layout-for-name(phone); /* DEPRECATED */
+  @include flex-properties-for-name(phone); /* DEPRECATED */
+  @include layout-for-name(sm);
+  @include flex-properties-for-name(sm);
 }
-@media (min-width: $layout-breakpoint-sm + 1) and (max-width: $layout-breakpoint-md) {
-  @include layout-for-size(tablet);
-  @include flex-properties-for-size(tablet);
+@media (min-width: $layout-breakpoint-sm) {
+  @include layout-for-name(gt-sm);
+  @include flex-properties-for-name(gt-sm);
 }
-@media (min-width: $layout-breakpoint-md + 1) and (max-width: $layout-breakpoint-lg) {
-  @include layout-for-size(tablet-landscape);
-  @include flex-properties-for-size(tablet-landscape);
+
+@media (min-width: $layout-breakpoint-sm) and (max-width: $layout-breakpoint-md) {
+  @include layout-for-name(tablet); /* DEPRECATED */
+  @include flex-properties-for-name(tablet); /* DEPRECATED */
+  @include layout-for-name(md);
+  @include flex-properties-for-name(md);
 }
-@media (min-width: $layout-breakpoint-lg + 1) {
-  @include layout-for-size(pc);
-  @include flex-properties-for-size(pc);
+@media (min-width: $layout-breakpoint-md) {
+  @include layout-for-name(gt-md);
+  @include flex-properties-for-name(gt-md);
+}
+
+@media (min-width: $layout-breakpoint-md) and (max-width: $layout-breakpoint-lg) {
+  @include layout-for-name(tablet-landscape); /* DEPRECATED */
+  @include flex-properties-for-name(tablet-landscape); /* DEPRECATED */
+  @include layout-for-name(lg);
+  @include flex-properties-for-name(lg);
+}
+@media (min-width: $layout-breakpoint-lg) {
+  @include layout-for-name(pc); /* DEPRECATED */
+  @include flex-properties-for-name(pc); /* DEPRECATED */
+
+  @include layout-for-name(xl);  
+  @include flex-properties-for-name(xl);
 }
 
 
