refactor(style): this restyles parts of the site's layout

--- a/src/components/button/demoBasicUsage/style.css
+++ b/src/components/button/demoBasicUsage/style.css
@@ -13,7 +13,7 @@ md-content {
   margin-right: 7px;
 }
 section .md-button:not(.md-fab) {
-  width: 10em;
+  min-width: 10em;
 }
 section .md-button {
   display: block;
