--- a/docs/app/css/style.css
+++ b/docs/app/css/style.css
@@ -3,6 +3,7 @@ body {
   overflow: hidden;
   max-width: 100%; 
   max-height: 100%;
+  font-size: 14px;
 }
 
 a {
@@ -79,7 +80,11 @@ code:not(.highlight) {
   margin-right: 1px;
 }
 
-
+md-sidenav md-toolbar.md-medium-tall .md-toolbar-tools {
+  height: auto;
+  line-height: 24px;
+  padding-top: 20px;
+}
 
 .md-sidenav-inner {
   background: #fff;
@@ -115,11 +120,11 @@ code:not(.highlight) {
   text-decoration: none;
   width: 100%;
   z-index: 1;
-  -webkit-transition: 0.2s ease-in-out;
+  -webkit-transition: 0.45s cubic-bezier(0.35, 0, 0.25, 1);
   -webkit-transition-property: max-height, background-color, opacity;
-  -moz-transition: 0.2s ease-in-out;
+  -moz-transition: 0.45s cubic-bezier(0.35, 0, 0.25, 1);
   -moz-transition-property: max-height, background-color, opacity;
-  transition: 0.2s ease-in-out;
+  transition: 0.45s cubic-bezier(0.35, 0, 0.25, 1);
   transition-property: max-height, background-color, opacity;
 }
 .menu-item.ng-hide {
@@ -136,17 +141,15 @@ code:not(.highlight) {
 }
 .menu-item.menu-title {
   color: #888;
-  font-size: 16px;
+  font-size: 14px;
   padding-left: 16px;
   text-align: left;
   text-transform: uppercase;
-}
-.menu-item.menu-title.active {
-  font-weight: bold;
+  transition: color 0.35s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .menu-item.menu-title:hover,
-.menu-item.menu-title:focus {
-  color: #AAA;
+.menu-item.menu-title.active {
+  color: #01579b;
 }
 
 .menu-icon {
@@ -160,15 +163,15 @@ code:not(.highlight) {
 
 .demo-container {
   margin-top: 30px;
-  -webkit-transition: 0.02s padding ease-in-out;
-  transition: 0.02s padding ease-in-out;
+  -webkit-transition: 0.02s padding cubic-bezier(0.35, 0, 0.25, 1);
+  transition: 0.02s padding cubic-bezier(0.35, 0, 0.25, 1);
   position: relative;
   padding-bottom: 0;
 }
 .demo-source-tabs {
   z-index: 1;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
+  -webkit-transition: all 0.45s cubic-bezier(0.35, 0, 0.25, 1);
+  transition: all 0.45s cubic-bezier(0.35, 0, 0.25, 1);
   max-height: 448px;
   min-height: 448px;
   background: #fff;
@@ -222,14 +225,14 @@ md-tabs.demo-source-tabs md-tab-label {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.36);
 }
 .demo-toolbar .md-button {
-  color: white;
+  color: #616161;
 }
 
 md-toolbar.demo-toolbar,
 .demo-source-tabs md-tab,
 .demo-source-tabs .tabs-header {
-  background: #00BCD4 !important;
-  color: white;
+  background: #E0E0E0 !important;
+  color: #616161;
 }
 md-toolbar.demo-toolbar md-tab-label {
   color: #99E4EE
@@ -306,7 +309,7 @@ md-toolbar.demo-toolbar .md-button {
 .api-params-label { 
   margin-right: 8px;
   text-align: center;
-  margin-top: 16px;
+  margin-top: 14px;
   -webkit-align-self: flex-start;
   -moz-align-self: flex-start;
   -ms-flex-item-align: start;
@@ -362,7 +365,7 @@ ul.methods li h3 {
     list-style: default;
   }
   ul.methods .method-function-syntax {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
