--- a/docs/config/template/index.template.html
+++ b/docs/config/template/index.template.html
@@ -10,26 +10,32 @@
 
 <script src="docs.js"></script>
 <script src="docs-demo-scripts.js"></script>
+<link rel="stylesheet" href="//fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic">
 <link rel="stylesheet" href="docs.css">
 </head>
 <body layout="row">
 
   <md-sidenav layout="column"
-    class="md-sidenav-left md-whiteframe-z2"
-    md-component-id="left"
-    md-is-locked-open="$media('md')">
+              style="overflow: hidden; display: flex;"
+              class="md-sidenav-left md-whiteframe-z2"
+              md-component-id="left"
+              md-is-locked-open="$media('md')">
 
-    <md-toolbar class="md-medium-tall">
-      <h1 class="md-toolbar-tools" style="padding-top:25px;">
-        <a href="" ng-click="goHome()">Angular<br/>Material Design</a>
+    <md-toolbar class="md-medium-tall" md-bg-level="900" style="max-height:88px;">
+      <h1 class="md-toolbar-tools">
+        <a href="" ng-click="goHome()">
+          Angular<br/>
+          <span md-color-level="100">Material Design</span>
+        </a>
       </h1>
     </md-toolbar>
 
-    <md-content flex>
+    <md-content flex style="overflow: auto;">
       <div ng-repeat="section in menu.sections">
 
         <button class="menu-item menu-title md-menu-item"
           ng-click="menu.toggleSelectSection(section)"
+          ng-class="{ active: menu.isSectionSelected(section) }"
           md-active="menu.isSectionSelected(section)"
           md-ink-ripple="#bbb">
           {{section.name}}
@@ -50,9 +56,8 @@
   </md-sidenav>
 
   <div layout="column" layout-fill tabIndex="-1" role="main">
-    <md-toolbar md-theme="indigo" class="md-medium-tall app-toolbar">
-
-      <div class="md-toolbar-tools" ng-click="openMenu()">
+    <md-toolbar class="md-medium-tall app-toolbar" md-bg-level="700">
+      <div class="md-toolbar-tools" ng-click="openMenu()" style="padding-top: 34px; height: auto; line-height: 24px;">
         <button class="menu-icon" hide show-phone show-tablet aria-label="Toggle Menu">
           <md-icon icon="img/icons/ic_menu_24px.svg">
           </md-icon>
