--- a/src/components/toolbar/toolbar-theme.scss
+++ b/src/components/toolbar/toolbar-theme.scss
@@ -1,7 +1,25 @@
 $toolbar-background-color: map-get($primary-color-palette, '500') !default;
 $toolbar-text-color: $primary-color-palette-contrast-color;
+$toolbar-background-color-900: map-get($primary-color-palette, '900') !default;
+$toolbar-background-color-700: map-get($primary-color-palette, '700') !default;
+$levels: (50, 100, 200, 300, 400, 500, 600, 700, 800, 900, 'A100', 'A200', 'A400', 'A700');
 
 md-toolbar.md-#{$theme-name}-theme {
   background-color: $toolbar-background-color;
   color: $primary-color-palette-contrast-color;
+}
+
+.md-#{$theme-name}-theme {
+  @each $level in $levels {
+    *[md-color-level='#{$level}'],
+    &[md-color-level='#{$level}'] {
+      color: map-get($primary-color-palette, '#{$level}') !important;
+    }
+  }
+  @each $level in $levels {
+    *[md-bg-level='#{$level}'],
+    &[md-bg-level='#{$level}'] {
+      background-color: map-get($primary-color-palette, '#{$level}') !important;
+    }
+  }
 }
