--- a/src/core/style/variables.scss
+++ b/src/core/style/variables.scss
@@ -1,7 +1,7 @@
 $theme-name: 'default' !default;
 
 // Font Variables
-$font-family: 'RobotoDraft', 'Helvetica Neue', Helvetica, Arial !default;
+$font-family: RobotoDraft, Roboto, sans-serif !default;
 
 $dark-theme: false !default;
 $foreground-color-palette: $color-grey !default;
